package ch.zhaw.pm3.loremipsum.common;

public enum TeleNrFormatEnum {

    NATIONAL,
    INTERNATIONAL
}
